// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/metadata-view/components/MetadataViewTable Render should match render 1`] = `
<Table
  disableHeader={false}
  estimatedRowSize={30}
  headerClassName="table-header"
  headerHeight={40}
  headerRowRenderer={[Function]}
  headerStyle={Object {}}
  height={100}
  minWidth={true}
  noRowsRenderer={[Function]}
  onRowsRendered={[Function]}
  onScroll={[Function]}
  overscanIndicesGetter={[Function]}
  overscanRowCount={10}
  rowClassName="table-header-row-container"
  rowCount={3}
  rowGetter={[Function]}
  rowHeight={50}
  rowRenderer={[Function]}
  rowStyle={Object {}}
  scrollToAlignment="auto"
  scrollToIndex={-1}
  style={Object {}}
  width={100}
>
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="cell-text-content-container"
    dataKey="size"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    key="metadataview-column-size-0"
    label="Size"
    minWidth={45}
    style={Object {}}
    width={12.5}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="cell-text-content-container"
    dataKey="vendor name"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    key="metadataview-column-vendor name-1"
    label="Vendor Name"
    minWidth={45}
    style={Object {}}
    width={12.5}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="cell-text-content-container"
    dataKey="updated"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    key="metadataview-column-updated-2"
    label="Updated"
    minWidth={45}
    style={Object {}}
    width={12.5}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="cell-text-content-container"
    dataKey="contract value"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    key="metadataview-column-contract value-3"
    label="Contract Value"
    minWidth={45}
    style={Object {}}
    width={12.5}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="cell-text-content-container"
    dataKey="expiration month"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    key="metadataview-column-expiration month-4"
    label="Expiration Month"
    minWidth={45}
    style={Object {}}
    width={12.5}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="cell-text-content-container"
    dataKey="country"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    key="metadataview-column-country-5"
    label="Country"
    minWidth={45}
    style={Object {}}
    width={12.5}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="cell-text-content-container"
    dataKey="state"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    key="metadataview-column-state-6"
    label="State"
    minWidth={45}
    style={Object {}}
    width={12.5}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="cell-text-content-container"
    dataKey="function"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    key="metadataview-column-function-7"
    label="Function"
    minWidth={45}
    style={Object {}}
    width={12.5}
  />
</Table>
`;

exports[`features/metadata-view/components/MetadataViewTable renderOptionalColumns() render 1`] = `
Array [
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="cell-text-content-container"
    dataKey="size"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="Size"
    minWidth={45}
    style={Object {}}
    width={12.5}
  />,
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="cell-text-content-container"
    dataKey="vendor name"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="Vendor Name"
    minWidth={45}
    style={Object {}}
    width={12.5}
  />,
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="cell-text-content-container"
    dataKey="updated"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="Updated"
    minWidth={45}
    style={Object {}}
    width={12.5}
  />,
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="cell-text-content-container"
    dataKey="contract value"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="Contract Value"
    minWidth={45}
    style={Object {}}
    width={12.5}
  />,
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="cell-text-content-container"
    dataKey="expiration month"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="Expiration Month"
    minWidth={45}
    style={Object {}}
    width={12.5}
  />,
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="cell-text-content-container"
    dataKey="country"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="Country"
    minWidth={45}
    style={Object {}}
    width={12.5}
  />,
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="cell-text-content-container"
    dataKey="state"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="State"
    minWidth={45}
    style={Object {}}
    width={12.5}
  />,
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    className="cell-text-content-container"
    dataKey="function"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="Function"
    minWidth={45}
    style={Object {}}
    width={12.5}
  />,
]
`;
